--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -47,9 +47,9 @@ For example:
 
 {{{ Ex:  ./PerM Ref.fa Reads.fa -v 5 -E -T 36 -m -s -o out.sam }}}
 
-  * PerM will report only the uniquely mapped reads within 5 mismatches in the first 36 bases.
-  * PerM will reconstruct and save the indexes to the default path for future mappings.
-  * PerM will output the mappings file to out.sam in the sam format.
+  PerM will report only the uniquely mapped reads within 5 mismatches in the first 36 bases.
+  PerM will reconstruct and save the indexes to the default path for future mappings.
+  PerM will output the mappings file to out.sam in the sam format.
 
 ==== Options for mate-paired reads ==== 
 PerM deals with mate-paired reads by mapping each end separately. All combination of mated paired mapping in the same ref will be printed, if their separation are in the expected ranged, specified by the upper bound and the lower bound. 
@@ -62,11 +62,11 @@ PerM deals with mate-paired reads by mapping each end separately. All combinatio
 The default is set as lower bound 0 bp and upper bound 3000 bp. The upper bound and lower bound can be negative, which may catch the re-arrangement variations. User should use argument {{{ -A }}} to avoid missing the correct pairs. However, this may let the running time become very slow, if both ends are in the repetitive regions. 
 
 {{{Ex:  ./PerM -1 F3.fq -2 R3.fq -U 500 -L 200 -e -A -v 5 -m -s -o out.sam.}}}
-  * All Paired mapping with separation outside the [200bp, 500bp] range won't be output.
-  * All mapped-paired with multiple qualified mapped pairs won't be output for {{{ -e }}}
-  * For each end, try all mapping locations within 5 mismatches. 
-  * PerM will reconstruct and save the index to the default path for future mappings.
-  * PerM will output the mappings file to out.sam in the sam format.
+  All Paired mapping with separation outside the [200bp, 500bp] range won't be output.
+  All mapped-paired with multiple qualified mapped pairs won't be output for {{{ -e }}}
+  For each end, try all mapping locations within 5 mismatches. 
+  PerM will reconstruct and save the index to the default path for future mappings.
+  PerM will output the mappings file to out.sam in the sam format.
 
 ==== Default setting ====  
   * Allow only two mismatches in each end and use seed {{{F2 or S_11}}}
