--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -30,11 +30,13 @@ For example:
  # The reads file should be in the .fasta, .fastq, .csfasta or .csfastq format. PerM parses a file according to it's ext file name, or the format specified by flag *{{{--format <format>}}}*. If there are multiple read files, list each file names in a .txt file, with each row a path of the reads file. PerM takes it as the input and can map multiple read sets in parallel by OpenMP. 
  # Mismatch threshold could be a integer 2 to 5. For reads over 64 bp, PerM allows double the number of mismatches than the given threshold.
 ==== Options ====
- * *-A*     Output all alignments within the mismatch threshold, end-to-end.
- * *-B*     Output best alignments in terms of mismatches in the threshold.(Default) 
- * *-E*     Output only the unique mapped reads. 
- * *-m*     Create the reference index, without reusing the saved index.
- * *-s* _P_     Save the reference index to accelerate the mapping in the future. If path _P_ is not specify, the default path will be used. 
+ ||*-A*|| || Output all alignments within the mismatch threshold, end-to-end.||
+ ||*-B*|| || Output best alignments in terms of mismatches in the threshold. ||
+ ||*-E*|| || Output only the unique mapped reads. ||
+ ||*-m*|| || Create the reference index, without reusing the saved index. ||
+ ||*-s*||_P_|| Save the reference index to accelerate the mapping in the future. If path _P_ is not specify, the default path will be used. ||  
+
+
  * *-v* _I_     ,where I i the number of mismatches allowed in one end.
  * *-T* _I_     ,where I is tbe length to truncate read length, say 30 means use only first 30 bases (signals). Don't put the number if the full read is meant to be used.
  * *-o* _P_,     where P is the the output path for one read set. PerM's output are in .mapping or .sam format, determined by the ext name of P. 
@@ -47,9 +49,9 @@ For example:
 
 {{{ Ex:  ./PerM Ref.fa Reads.fa -v 5 -E -T 36 -m -s -o out.sam }}}
 
-  PerM will report only the uniquely mapped reads within 5 mismatches in the first 36 bases.
-  PerM will reconstruct and save the indexes to the default path for future mappings.
-  PerM will output the mappings file to out.sam in the sam format.
+ * PerM will report only the uniquely mapped reads within 5 mismatches in the first 36 bases.
+ * PerM will reconstruct and save the indexes to the default path for future mappings.
+ * PerM will output the mappings file to out.sam in the sam format.
 
 ==== Options for mate-paired reads ==== 
 PerM deals with mate-paired reads by mapping each end separately. All combination of mated paired mapping in the same ref will be printed, if their separation are in the expected ranged, specified by the upper bound and the lower bound. 
@@ -62,11 +64,11 @@ PerM deals with mate-paired reads by mapping each end separately. All combinatio
 The default is set as lower bound 0 bp and upper bound 3000 bp. The upper bound and lower bound can be negative, which may catch the re-arrangement variations. User should use argument {{{ -A }}} to avoid missing the correct pairs. However, this may let the running time become very slow, if both ends are in the repetitive regions. 
 
 {{{Ex:  ./PerM -1 F3.fq -2 R3.fq -U 500 -L 200 -e -A -v 5 -m -s -o out.sam.}}}
-  All Paired mapping with separation outside the [200bp, 500bp] range won't be output.
-  All mapped-paired with multiple qualified mapped pairs won't be output for {{{ -e }}}
-  For each end, try all mapping locations within 5 mismatches. 
-  PerM will reconstruct and save the index to the default path for future mappings.
-  PerM will output the mappings file to out.sam in the sam format.
+  * All Paired mapping with separation outside the [200bp, 500bp] range won't be output.
+  * All mapped-paired with multiple qualified mapped pairs won't be output for {{{ -e }}}
+  * For each end, try all mapping locations within 5 mismatches. 
+  * PerM will reconstruct and save the index to the default path for future mappings.
+  * PerM will output the mappings file to out.sam in the sam format.
 
 ==== Default setting ====  
   * Allow only two mismatches in each end and use seed {{{F2 or S_11}}}
