--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -30,21 +30,19 @@ For example:
  # The reads file should be in the .fasta, .fastq, .csfasta or .csfastq format. PerM parses a file according to it's ext file name, or the format specified by flag *{{{--format <format>}}}*. If there are multiple read files, list each file names in a .txt file, with each row a path of the reads file. PerM takes it as the input and can map multiple read sets in parallel by OpenMP. 
  # Mismatch threshold could be a integer 2 to 5. For reads over 64 bp, PerM allows double the number of mismatches than the given threshold.
 ==== Options ====
-|| *Arg* || *Value* || *Discription* ||
 || *-A* || || Output all alignments within the mismatch threshold, end-to-end.||
 || *-B* || || Output best alignments in terms of mismatches in the threshold. ||
 || *-E* || || Output only the unique mapped reads. ||
 || *-m* || || Create the reference index, without reusing the saved index. ||
 || *-s* ||_P_|| Save the reference index to accelerate the mapping in the future. If path _P_ is not specify, the default path will be used. ||  
+|| *-v* ||_I_||, where I i the number of mismatches allowed in one end. ||
+|| *-T* ||_I_||, where I is tbe length to truncate read length, say 30 means use only first 30 bases (signals). Don't put the number if the full read is meant to be used. ||
+|| *-o* ||_P_||, where P is the the output path for one read set. PerM's output are in .mapping or .sam format, determined by the ext name of P. ||
+|| *-d* ||_P_||, where P is the the output dir for multip read set ||
+|| *-u* ||_P_||, Print the fasta(fastq) file of those unmapped reads to a file ||
 
-
- * *-v* _I_     ,where I i the number of mismatches allowed in one end.
- * *-T* _I_     ,where I is tbe length to truncate read length, say 30 means use only first 30 bases (signals). Don't put the number if the full read is meant to be used.
- * *-o* _P_,     where P is the the output path for one read set. PerM's output are in .mapping or .sam format, determined by the ext name of P. 
- * *-d* _P_,     where P is the the output dir for multip read set
- * *-u* _P_,     Print the fasta(fastq) file of those unmapped reads to a file
- * *--ignoreQS*     Ignore the quality scores in fastq or QUAL files.
- * *--seed* _{F2 | S11 | F3 | F4}_     Use the specified seed pattern. Check [http://bioinformatics.oxfordjournals.org/cgi/content/abstract/btp486 our paper] to balance the sensitivity and running time.
+|| *--ignoreQS* || Ignore the quality scores in fastq or QUAL files. ||
+|| *--seed* ||_{F2 | S11 | F3 | F4}_||Use the specified seed pattern. Check [http://bioinformatics.oxfordjournals.org/cgi/content/abstract/btp486 our paper] to balance the sensitivity and running time.||
  * *--readFormat* _{fasta | fastq | csfasta | csfastq}_     Read in reads in the specified format, instead of gussing according to the ext name.
  * *--delimiter* _c_,     where _c_ is a character which is used as the delimiter which is used to parse the read id. This is used for read set which attach additional information in the read id, using character ',', ':', '|' or other symbols. 
 
