--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -34,12 +34,12 @@ For example:
 || *-B* || || Output best alignments in terms of mismatches in the threshold. ||
 || *-E* || || Output only the unique mapped reads. ||
 || *-m* || || Create the reference index, without reusing the saved index. ||
-|| *-s* ||_P_|| Save the reference index to accelerate the mapping in the future. If path _P_ is not specify, the default path will be used. ||  
-|| *-v* ||_I_|| where I i the number of mismatches allowed in one end. ||
-|| *-T* ||_I_|| where I is tbe length to truncate read length, say 30 means use only first 30 bases (signals). Don't put the number if the full read is meant to be used. ||
-|| *-o* ||_P_|| where P is the the output path for one read set. PerM's output are in .mapping or .sam format, determined by the ext name of P. ||
-|| *-d* ||_P_|| where P is the the output dir for multip read set ||
-|| *-u* ||_P_|| Print the fasta(fastq) file of those unmapped reads to a file ||
+|| *-s* ||_Path_|| Save the reference index to accelerate the mapping in the future. If path _P_ is not specify, the default path will be used. ||  
+|| *-v* ||_Int_|| where Int i the number of mismatches allowed in one end. ||
+|| *-T* ||_Int_|| where Int is tbe length to truncate read length, say 30 means use only first 30 bases (signals). Don't put the number if the full read is meant to be used. ||
+|| *-o* ||_Path_|| where Path is for output the mapping of one read set. PerM's output are in .mapping or .sam format, determined by the ext name of P. ||
+|| *-d* ||_Path_|| where Path is the dir for multip read sets ||
+|| *-u* ||_Path_|| Print the fasta(fastq) file of those unmapped reads to a file ||
 
 ====Long Options====
 
@@ -58,9 +58,8 @@ For example:
 PerM deals with mate-paired reads by mapping each end separately. All combination of mated paired mapping in the same ref will be printed, if their separation are in the expected ranged, specified by the upper bound and the lower bound. 
 
 || *-e *|| || Exclude ambiguous paired. ||
-|| *-L *||_I_|| mate-paired separate lower bound ||
-|| *-U *||_I_|| mate-paired separate upper bound ||
-|| *-o *||_P_|| where P is the path (single paired read set) or the directory (multiple paired read sets)||
+|| *-L *||_Int_|| mate-paired separate lower bound ||
+|| *-U *||_Int_|| mate-paired separate upper bound ||
 
 The default is set as lower bound 0 bp and upper bound 3000 bp. The upper bound and lower bound can be negative, which may catch the re-arrangement variations. User should use argument {{{ -A }}} to avoid missing the correct pairs. However, this may let the running time become very slow, if both ends are in the repetitive regions. 
 
