--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -38,8 +38,8 @@ For example:
 || *-v* ||_Int_|| where Int i the number of mismatches allowed in one end. ||
 || *-T* ||_Int_|| where Int is tbe length to truncate read length, say 30 means use only first 30 bases (signals). Don't put the number if the full read is meant to be used. ||
 || *-o* ||_Path_|| where Path is for output the mapping of one read set. PerM's output are in .mapping or .sam format, determined by the ext name of P. ||
-|| *-d* ||_Path_|| where Path is the dir for multip read sets ||
-|| *-u* ||_Path_|| Print the fasta(fastq) file of those unmapped reads to a file ||
+|| *-d* ||_Path_|| where Path is the dir for multip read sets. ||
+|| *-u* ||_Path_|| Print the fasta(fastq) file of those unmapped reads to a file. ||
 
 ====Long Options====
 
