--- a/wiki/Compile.wiki
+++ b/wiki/Compile.wiki
@@ -1,9 +1,9 @@
 #labels Phase-Deploy
-PerM has been compiled in Redhat (32, 64 bits) and Windows XP (32 bit), Windows 7 (64bit), with gcc 3.0, gcc 4.3 and Visual C++. Try the compiled executable in the download section. 
+PerM has been compiled in Red Hat (32bits and 64 bits) and Windows XP (32 bit), Windows 7 (64bit), with gcc 3.0, gcc 4.3 and Visual C++. Try the compiled executable in the download section. 
 Please email "yanghoch at usc.edu", if you encounter any problems or have any suggestion.
 
-Download and unzip the source code. (Type unzip ./PerM_0.1.9_GCC.zip in linux) in the directory with the download. For Linux and gcc user, type make in the unzip directory to generate the execute file PerM. Note, the attached make file is for linux with gcc 4.3 or later. Type gcc -v to check your compiler version. Because OpenMP are supported after gcc 4.3, if your compiler is earlier version, use an alternative makefile (no openMP) with the flag "-fopenmp" removed, and only single CPU will be utilized. 
+To unzip the source code that you download on Linux, type {{{unzip ./PerM_0.1.9_GCC.zip}}} in the directory with the download. For gcc + Linux, type make in the unzip directory to generate the execute file PerM. Note, the attached makefile is for Linux with gcc 4.3 or later. Type gcc -v to check your compiler version. Because OpenMP are supported after gcc 4.3, if your compiler is earlier version, use an alternative makefile (no OpenMP) with the flag "-fopenmp" removed, and only single CPU will be utilized. 
 
-For windows user, it is easy to add the source code to Eclipse or visual studio c++ project and compile. For VC++ 2008, (I only tried free express version), it is normal to have many security warning. 
+For Windows users, it is easy to add the source code to Eclipse or Visual C++ projects and compile. For VC++ 2008, it is normal to have many security warnings. 
 
 [http://code.google.com/p/perm/wiki/Usage Back to usage]
