--- a/wiki/Algorithms.wiki
+++ b/wiki/Algorithms.wiki
@@ -1,13 +1,13 @@
 #labels Featured
-== Compared to Seed-Based Method ==
+== Compared to Seed-Based Methods ==
 Many programs, including Eland, MAQ, RMAP, ZOOM, SOCS, Crona Lite all use similar seed method. The reason that PerM could be faster is because its higher seed weight. Most of the program have seed weight 13 or 14, limited by the memory for hashing. To break the limit, PerM use both hash and binary search on the "periodic spaced seed array". The high seed weight is necessary for large genome with highly repetitive regions, which is typically the bottleneck of genome scale mapping. 
 
-== Compared to BWT-Based Method ==
+== Compared to BWT-Based Methods ==
 Bowtie and other other programs, used Burrows-Wheeler Transform to achieve a super memory efficient and fast reads mapping, especially for high quality, short reads, with no full sensitivity guaranteed. We are also thinking about how to use similar data compression algorithm to achieve the memory efficiency.
 
-Compared to the BWT based method, PerM still has advantages as follows. 
+Compared to the BWT based methods, PerM has the following advantages. 
 
-(0) PerM can build index in a shorter time, although with much higher memory usage. However, in this way, PerM can take advantage of multiple CPU to build the index in parallel. This feature is helpful for the one-time mapping.
+(0) PerM can build index in a shorter time, although with much larger memory usage. Moreover, PerM can take advantage of multiple CPUs (potentially in GPU) to build the index in parallel. This feature is helpful under modern multi-cores computers, especially for the one-time mapping task.
 
 (1) PerM is designed for SOLiD reads. Although one can use 'ACGT' to present colors signal and use Bowtie to mapped the so-called "double encoded" SOLiD reads, this will lose the first base information. Ex: it will map the read "AAAAA...A" to a reference with "CCCC...CCC", because their color signal are all '0'(Blue).
 
